--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
+    <meta charset="UTF-8"/>
     <link rel="icon" type="image" href="/src/assets/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Security-Policy"
+  content="upgrade-insecure-requests"/>
     <title>EcoPlastics♻️</title>
   </head>
   <body>
