--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image" href="/src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>EcoPlastics♻️</title>
+    <title>EcoPlastics</title>
   </head>
-  <body>
+  <body style="margin:0;padding:0"> 
+    <!-- // style="" -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
