--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image" href="/src/assets/icon.png" />
+    <link rel="icon" type="image" href="/src/assets/icons&logos/icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>EcoPlastics</title>
   </head>
